--- a/mvp_engenharia_dados_olist.ipynb
+++ b/mvp_engenharia_dados_olist.ipynb
@@ -99,13 +99,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pxpgVDNmMoYJ",
-        "outputId": "6a884d91-3956-46c1-d672-d5b906bea03d"
+        "outputId": "fac5e7b5-be33-46b9-b716-c69c9b732b79"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 3
         }
       ]
     },
@@ -167,7 +166,7 @@
       "metadata": {
         "id": "Te3xdS9JMrBs"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -215,7 +214,7 @@
       "metadata": {
         "id": "RtVrYDHJMuqW"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -251,7 +250,7 @@
       "metadata": {
         "id": "kmuuXYeBMxvZ"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -295,9 +294,9 @@
           "height": 989
         },
         "id": "XBM-hVLyM0mx",
-        "outputId": "6470d7fe-fe14-4a29-a63d-9edd0ae48044"
+        "outputId": "046cb02c-e587-48e6-f5f7-042a22b39623"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +336,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e0f2fc00-04dc-48c9-b200-5a05f9866249\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-49fddbac-e3eb-4928-b7e4-b9be7be6412a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -517,7 +516,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e0f2fc00-04dc-48c9-b200-5a05f9866249')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49fddbac-e3eb-4928-b7e4-b9be7be6412a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -569,12 +568,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e0f2fc00-04dc-48c9-b200-5a05f9866249 button.colab-df-convert');\n",
+              "        document.querySelector('#df-49fddbac-e3eb-4928-b7e4-b9be7be6412a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e0f2fc00-04dc-48c9-b200-5a05f9866249');\n",
+              "        const element = document.querySelector('#df-49fddbac-e3eb-4928-b7e4-b9be7be6412a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -594,8 +593,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-0ac617ad-dd5f-451b-97bb-00bd0aebb869\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0ac617ad-dd5f-451b-97bb-00bd0aebb869')\"\n",
+              "    <div id=\"df-8184118e-6634-4f5f-8a3c-effb532b3833\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8184118e-6634-4f5f-8a3c-effb532b3833')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -714,7 +713,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-0ac617ad-dd5f-451b-97bb-00bd0aebb869 button');\n",
+              "            document.querySelector('#df-8184118e-6634-4f5f-8a3c-effb532b3833 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -730,7 +729,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -759,9 +758,9 @@
           "height": 961
         },
         "id": "QrPbhStxM3Nj",
-        "outputId": "17414cfe-6c88-49a7-8a58-21f77dc98bf7"
+        "outputId": "c2c14a31-8c62-4c34-e51b-c62c8d1fbdb4"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,38 +937,28 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Relação entre atraso e avaliação\n",
-        "fact_reviews = fact.merge(reviews, on=\"order_id\", how=\"left\")\n",
-        "\n",
         "fact_reviews.groupby(\n",
-        "    pd.cut(fact_reviews[\"delivery_delay_days\"], [-999, 0, 3, 7, 100])\n",
+        "    pd.cut(fact_reviews[\"delivery_delay_days\"], [-999, 0, 3, 7, 100]),\n",
+        "    observed=False\n",
         ")[\"review_score\"].mean()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 299
+          "height": 241
         },
         "id": "z5du5mudM4SA",
-        "outputId": "6b636f90-0c7d-43aa-cef5-dd79039b4922"
+        "outputId": "2ea0cecf-7125-419c-e4fd-4dcb3ea77b02"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-90342192.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-            "  fact_reviews.groupby(\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1030,7 +1019,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
     },
@@ -1046,9 +1035,9 @@
           "height": 429
         },
         "id": "ZrELosGvM5Ti",
-        "outputId": "b93580c5-ab88-40d7-81e7-e35e7e4023e4"
+        "outputId": "3dac45ed-d2ee-4eb5-b051-1d1b53984b3b"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1140,7 +1129,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
