--- a/mvp_engenharia_dados_olist.ipynb
+++ b/mvp_engenharia_dados_olist.ipynb
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pxpgVDNmMoYJ",
-        "outputId": "fac5e7b5-be33-46b9-b716-c69c9b732b79"
+        "outputId": "4c46b93e-e19a-41cd-b137-10d89c015d99"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 14
         }
       ]
     },
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "Te3xdS9JMrBs"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "RtVrYDHJMuqW"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "kmuuXYeBMxvZ"
       },
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -294,9 +294,9 @@
           "height": 989
         },
         "id": "XBM-hVLyM0mx",
-        "outputId": "046cb02c-e587-48e6-f5f7-042a22b39623"
+        "outputId": "e36157fb-fa24-4f17-d550-b64b4e685afd"
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-49fddbac-e3eb-4928-b7e4-b9be7be6412a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5e733db1-48b5-4770-b433-71fdb2a80428\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -516,7 +516,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49fddbac-e3eb-4928-b7e4-b9be7be6412a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5e733db1-48b5-4770-b433-71fdb2a80428')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -568,12 +568,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-49fddbac-e3eb-4928-b7e4-b9be7be6412a button.colab-df-convert');\n",
+              "        document.querySelector('#df-5e733db1-48b5-4770-b433-71fdb2a80428 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-49fddbac-e3eb-4928-b7e4-b9be7be6412a');\n",
+              "        const element = document.querySelector('#df-5e733db1-48b5-4770-b433-71fdb2a80428');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -593,8 +593,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-8184118e-6634-4f5f-8a3c-effb532b3833\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8184118e-6634-4f5f-8a3c-effb532b3833')\"\n",
+              "    <div id=\"df-edefb2a2-d75d-43ba-9c92-501f32f70741\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-edefb2a2-d75d-43ba-9c92-501f32f70741')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -713,7 +713,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-8184118e-6634-4f5f-8a3c-effb532b3833 button');\n",
+              "            document.querySelector('#df-edefb2a2-d75d-43ba-9c92-501f32f70741 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -729,7 +729,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 18
         }
       ]
     },
@@ -749,7 +749,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Tempo médio de atraso por estado\n",
+        "# Diferença média entre data de entrega e data estimada por estado\n",
+        "\n",
         "fact.groupby(\"customer_state\")[\"delivery_delay_days\"].mean().sort_values(ascending=False)\n"
       ],
       "metadata": {
@@ -758,9 +759,9 @@
           "height": 961
         },
         "id": "QrPbhStxM3Nj",
-        "outputId": "c2c14a31-8c62-4c34-e51b-c62c8d1fbdb4"
+        "outputId": "2e2ed987-e220-4ed1-d9e9-05067f5cec70"
       },
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,9 +938,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Relação entre atraso e avaliação\n",
+        "fact_reviews = fact.merge(reviews, on=\"order_id\", how=\"left\")\n"
+      ],
+      "metadata": {
+        "id": "suSBeRVCX3hS"
+      },
+      "execution_count": 20,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -955,9 +968,9 @@
           "height": 241
         },
         "id": "z5du5mudM4SA",
-        "outputId": "2ea0cecf-7125-419c-e4fd-4dcb3ea77b02"
+        "outputId": "830150e0-4dcd-4043-db6e-04a8d26eb857"
       },
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1032,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 21
         }
       ]
     },
@@ -1035,9 +1048,9 @@
           "height": 429
         },
         "id": "ZrELosGvM5Ti",
-        "outputId": "3dac45ed-d2ee-4eb5-b051-1d1b53984b3b"
+        "outputId": "3a33d183-4531-4ee7-a138-d9dcd9431c0d"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1142,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 22
         }
       ]
     },
@@ -1157,7 +1170,7 @@
         "\n",
         "As principais dificuldades encontradas estiveram relacionadas à **padronização de datas** e à **conciliação entre múltiplos conjuntos de dados**.\n",
         "\n",
-        "Como trabalhos futuros, sugere-se:\n",
+        "Como trabalhos futuros, pretendo:\n",
         "- Automatização do pipeline em uma plataforma dedicada de dados  \n",
         "- Criação de **dashboards interativos** para acompanhamento contínuo dos indicadores logísticos  \n"
       ],
