--- a/mvp_engenharia_dados_olist.ipynb
+++ b/mvp_engenharia_dados_olist.ipynb
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pxpgVDNmMoYJ",
-        "outputId": "4c46b93e-e19a-41cd-b137-10d89c015d99"
+        "outputId": "e8dfa4fc-0853-4908-f390-f00833b13162"
       },
-      "execution_count": 14,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 23
         }
       ]
     },
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "Te3xdS9JMrBs"
       },
-      "execution_count": 15,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "RtVrYDHJMuqW"
       },
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "kmuuXYeBMxvZ"
       },
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -294,9 +294,9 @@
           "height": 989
         },
         "id": "XBM-hVLyM0mx",
-        "outputId": "e36157fb-fa24-4f17-d550-b64b4e685afd"
+        "outputId": "021e36ef-c292-42d8-dd3c-a3d4e0f3f02f"
       },
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5e733db1-48b5-4770-b433-71fdb2a80428\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a98069a5-070b-4aac-9f0b-fca0a2af5bce\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -516,7 +516,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5e733db1-48b5-4770-b433-71fdb2a80428')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a98069a5-070b-4aac-9f0b-fca0a2af5bce')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -568,12 +568,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5e733db1-48b5-4770-b433-71fdb2a80428 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a98069a5-070b-4aac-9f0b-fca0a2af5bce button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5e733db1-48b5-4770-b433-71fdb2a80428');\n",
+              "        const element = document.querySelector('#df-a98069a5-070b-4aac-9f0b-fca0a2af5bce');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -593,8 +593,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-edefb2a2-d75d-43ba-9c92-501f32f70741\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-edefb2a2-d75d-43ba-9c92-501f32f70741')\"\n",
+              "    <div id=\"df-e696aee9-dff6-434b-846b-9e3ab650fe7c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e696aee9-dff6-434b-846b-9e3ab650fe7c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -713,7 +713,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-edefb2a2-d75d-43ba-9c92-501f32f70741 button');\n",
+              "            document.querySelector('#df-e696aee9-dff6-434b-846b-9e3ab650fe7c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -729,7 +729,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 27
         }
       ]
     },
@@ -759,9 +759,9 @@
           "height": 961
         },
         "id": "QrPbhStxM3Nj",
-        "outputId": "2e2ed987-e220-4ed1-d9e9-05067f5cec70"
+        "outputId": "87cb5f5f-19dd-4ea1-cc7d-89cd0941f004"
       },
-      "execution_count": 19,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,7 +938,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 28
         }
       ]
     },
@@ -951,7 +951,7 @@
       "metadata": {
         "id": "suSBeRVCX3hS"
       },
-      "execution_count": 20,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -968,9 +968,9 @@
           "height": 241
         },
         "id": "z5du5mudM4SA",
-        "outputId": "830150e0-4dcd-4043-db6e-04a8d26eb857"
+        "outputId": "f7e0df66-f4bc-4e1e-f8c8-1579dc734ef1"
       },
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,9 +1032,22 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 30
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔎 **Discussão dos Resultados**\n",
+        "\n",
+        "Os dados mostram que entregas realizadas antes ou no prazo possuem média de avaliação superior a 4 pontos, indicando alta satisfação do cliente. À medida que o atraso aumenta, observa-se uma redução expressiva na avaliação média, chegando a valores inferiores a 2 pontos para atrasos superiores a 7 dias.\n",
+        "\n",
+        "Esse comportamento sugere que o atraso na entrega é um dos principais fatores de insatisfação no e-commerce, superando inclusive aspectos relacionados ao produto em si. Tal evidência reforça a importância do cumprimento de prazos como elemento crítico para a fidelização do cliente.\n"
+      ],
+      "metadata": {
+        "id": "P0EJJgmBbpne"
+      }
     },
     {
       "cell_type": "code",
@@ -1048,9 +1061,9 @@
           "height": 429
         },
         "id": "ZrELosGvM5Ti",
-        "outputId": "3a33d183-4531-4ee7-a138-d9dcd9431c0d"
+        "outputId": "13e7996e-95b4-40d3-9b8b-53ee5ac1a93f"
       },
-      "execution_count": 22,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,20 +1155,22 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 31
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## ✅ **Conclusões**\n",
+        "## ✅ Conclusões\n",
         "\n",
-        "Os resultados indicam uma **relação clara entre desempenho logístico e satisfação do cliente**, onde maiores atrasos estão associados a **avaliações mais baixas**.\n",
+        "Os resultados indicam uma relação clara entre desempenho logístico e satisfação do cliente. Observou-se que pedidos entregues dentro do prazo ou antecipadamente apresentam avaliações médias significativamente mais altas, enquanto atrasos progressivos estão associados a uma queda consistente nas notas atribuídas pelos clientes.\n",
         "\n",
-        "Observa-se também que fatores **geográficos** influenciam o tempo de entrega, reforçando a logística como elemento estratégico no e-commerce brasileiro.\n",
+        "A análise por estado evidenciou que fatores geográficos influenciam diretamente o tempo de entrega, com estados mais distantes dos grandes centros logísticos apresentando maiores tempos médios entre a data estimada e a data real de entrega. Esse comportamento reforça a importância da localização e da infraestrutura logística no contexto do e-commerce brasileiro.\n",
         "\n",
-        "Esses achados demonstram que a **qualidade logística** impacta diretamente a **experiência do cliente**.\n"
+        "Adicionalmente, a análise por categoria de produto sugere que características específicas dos produtos, como dimensões, peso e complexidade de transporte, podem impactar o desempenho logístico, influenciando indiretamente a experiência do cliente.\n",
+        "\n",
+        "De forma geral, os resultados demonstram que a qualidade da logística é um fator estratégico para o e-commerce, impactando não apenas custos operacionais, mas também a percepção de valor e a satisfação do consumidor final.\n"
       ],
       "metadata": {
         "id": "pklDKpA5M6bc"
