--- a/mvp_engenharia_dados_olist.ipynb
+++ b/mvp_engenharia_dados_olist.ipynb
@@ -1186,8 +1186,8 @@
         "As principais dificuldades encontradas estiveram relacionadas à **padronização de datas** e à **conciliação entre múltiplos conjuntos de dados**.\n",
         "\n",
         "Como trabalhos futuros, pretendo:\n",
-        "- Automatização do pipeline em uma plataforma dedicada de dados  \n",
-        "- Criação de **dashboards interativos** para acompanhamento contínuo dos indicadores logísticos  \n"
+        "- Automatizar o pipeline em uma plataforma dedicada de dados  \n",
+        "- Criar **dashboards interativos** para acompanhamento contínuo dos indicadores logísticos  \n"
       ],
       "metadata": {
         "id": "6wBXFS7fM7iS"
